--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,31 +8,56 @@
     tools:context="com.android.szparag.saymyname.MainActivity"
     >
 
-  <android.support.design.widget.AppBarLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:theme="@style/AppTheme.AppBarOverlay"
-      >
+  <!--<android.support.design.widget.AppBarLayout-->
+      <!--android:layout_width="368dp"-->
+      <!--android:layout_height="wrap_content"-->
+      <!--android:theme="@style/AppTheme.AppBarOverlay"-->
+      <!--tools:layout_editor_absoluteY="0dp"-->
+      <!--tools:layout_editor_absoluteX="8dp"-->
+      <!--&gt;-->
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
-        />
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?attr/actionBarSize"-->
+        <!--android:background="?attr/colorPrimary"-->
+        <!--app:popupTheme="@style/AppTheme.PopupOverlay"-->
+        <!--/>-->
 
-  </android.support.design.widget.AppBarLayout>
+  <!--</android.support.design.widget.AppBarLayout>-->
 
-  <include layout="@layout/content_main"/>
-
-  <android.support.design.widget.FloatingActionButton
-      android:id="@+id/fab"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="bottom|end"
-      android:layout_margin="@dimen/fab_margin"
-      app:srcCompat="@android:drawable/ic_dialog_email"
+  <SurfaceView
+      android:id="@+id/surfaceView"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_marginLeft="8dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      android:layout_marginRight="8dp"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_marginBottom="8dp"
+      app:layout_constraintTop_toTopOf="parent"
+      android:layout_marginTop="8dp"
+      tools:layout_constraintTop_creator="1"
+      tools:layout_constraintRight_creator="1"
+      tools:layout_constraintBottom_creator="1"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      tools:layout_constraintLeft_creator="1"
       />
 
-</android.support.design.widget.CoordinatorLayout>
+  <Button
+      android:id="@+id/button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="16dp"
+      android:text="Boom!"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      tools:layout_constraintRight_creator="1"
+      tools:layout_constraintLeft_creator="1"
+      />
+
+
+</android.support.constraint.ConstraintLayout>
