--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,24 +26,20 @@
 
   <!--</android.support.design.widget.AppBarLayout>-->
 
-  <SurfaceView
-      android:id="@+id/surfaceView"
-      android:layout_width="0dp"
-      android:layout_height="0dp"
-      android:layout_marginLeft="8dp"
-      app:layout_constraintLeft_toLeftOf="parent"
-      android:layout_marginRight="8dp"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintBottom_toBottomOf="parent"
-      android:layout_marginBottom="8dp"
-      app:layout_constraintTop_toTopOf="parent"
-      android:layout_marginTop="8dp"
-      tools:layout_constraintTop_creator="1"
-      tools:layout_constraintRight_creator="1"
-      tools:layout_constraintBottom_creator="1"
-      android:layout_marginStart="8dp"
-      android:layout_marginEnd="8dp"
-      tools:layout_constraintLeft_creator="1"
+  <include
+      android:id="@+id/layout_camera_preview_realtime"
+      layout="@layout/layout_camera_preview_realtime"
+      android:visibility="visible"
+      android:layout_height="match_parent"
+      android:layout_width="match_parent"
+      />
+
+  <include
+      android:id="@+id/layout_camera_photo_taken"
+      layout="@layout/layout_camera_photo_taken"
+      android:visibility="gone"
+      android:layout_height="match_parent"
+      android:layout_width="match_parent"
       />
 
   <Button
