--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
   <color name="colorPrimary">#f5f5f5</color>
   <color name="colorPrimaryDark">#e0e0e0</color>
   <color name="colorAccent">#3d5aff</color>
+
+  <color name="colorPrimary_alpha">#4bf5f5f5</color>
 </resources>
