--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,16 @@
 <resources>
+
+  <dimen name="hud_margin_vertical_big">@dimen/margin_big</dimen>
+  <dimen name="hud_margin_uniform_normal">@dimen/margin_small</dimen>
+
+  <!-- android standard -->
   <dimen name="fab_margin">16dp</dimen>
+
+  <!-- generic -->
+  <dimen name="margin_tiny">4dp</dimen>
+  <dimen name="margin_small">8dp</dimen>
+  <dimen name="margin_normal">@dimen/fab_margin</dimen>
+  <dimen name="margin_big">32dp</dimen>
+  <dimen name="margin_huge">64dp</dimen>
+
 </resources>
