--- a/app/src/main/res/layout/layout_realtime_camera_preview_hud_overlay.xml
+++ b/app/src/main/res/layout/layout_realtime_camera_preview_hud_overlay.xml
@@ -1,71 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/transparent"
+    android:orientation="vertical"
+    tools:background="@android:color/holo_red_dark"
     >
 
-  <Button
+  <ImageButton
       android:id="@+id/button_menu_hamburger"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="@dimen/hud_margin_uniform_normal"
       android:layout_marginTop="@dimen/hud_margin_uniform_normal"
-      android:background="@color/button_hud_primary_alpha"
+      android:background="?attr/selectableItemBackground"
       android:clickable="true"
-      android:foreground="?attr/selectableItemBackground"
-      android:text="menu"
+      android:src="@drawable/ic_action_menu_hamburger"
       app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      />
-  <Button
-      android:id="@+id/button_switch_language"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginLeft="0dp"
-      android:layout_marginTop="@dimen/hud_margin_vertical_big"
-      android:background="@color/button_hud_primary_alpha"
-      android:clickable="true"
-      android:foreground="?attr/selectableItemBackground"
-      android:text="lang"
-      app:layout_constraintHorizontal_chainStyle="packed"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toLeftOf="@+id/button_switch_model"
       app:layout_constraintTop_toTopOf="parent"
       />
 
-  <Button
-      android:id="@+id/button_switch_model"
+  <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginLeft="0dp"
-      android:layout_marginRight="@dimen/hud_margin_uniform_normal"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
       android:layout_marginTop="@dimen/hud_margin_vertical_big"
-      android:background="@color/button_hud_primary_alpha"
-      android:clickable="true"
-      android:foreground="?attr/selectableItemBackground"
-      android:text="model"
-      app:layout_constraintLeft_toRightOf="@+id/button_switch_language"
+      android:background="@drawable/drawable_lang_model_selector_background"
+      android:orientation="horizontal"
+      app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      />
+      >
 
-  <Button
+    <Button
+        android:id="@+id/button_switch_language"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.25"
+        android:background="@android:color/transparent"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:gravity="center"
+        android:paddingLeft="@dimen/saymyname_dimen_small"
+        android:paddingRight="@dimen/saymyname_dimen_tiny"
+        android:text="lng"
+        />
+
+    <Button
+        android:id="@+id/button_switch_model"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:background="@android:color/transparent"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:gravity="center"
+        android:paddingLeft="@dimen/saymyname_dimen_tiny"
+        android:paddingRight="@dimen/saymyname_dimen_small"
+        android:text="modelmodel"
+        />
+
+  </LinearLayout>
+
+
+  <com.android.szparag.saymyname.views.widgets.SaymynameCameraShutterButton
       android:id="@+id/button_shutter"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="@dimen/hud_margin_vertical_big"
+      android:layout_marginBottom="24dp"
       android:layout_marginLeft="@dimen/hud_margin_uniform_normal"
       android:layout_marginRight="@dimen/hud_margin_uniform_normal"
-      android:background="@color/button_hud_primary_alpha"
+      android:adjustViewBounds="true"
       android:clickable="true"
-      android:foreground="?attr/selectableItemBackground"
-      android:text="shutter"
+      android:foreground="@drawable/drawable_camera_shutter_top"
+      android:gravity="top"
+      android:hapticFeedbackEnabled="true"
+      app:backgroundTint="@color/saymyname_black_dark_alpha2"
+      app:elevation="10dp"
+      app:fabSize="normal"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
+      app:rippleColor="@color/saymyname_blue_primary"
       />
 
 </android.support.constraint.ConstraintLayout>
