--- a/app/src/main/res/layout/view_floating_words.xml
+++ b/app/src/main/res/layout/view_floating_words.xml
@@ -32,8 +32,8 @@
           android:id="@+id/textview_word_1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/margin_tiny"
-          android:layout_marginTop="@dimen/margin_tiny"
+          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
+          android:layout_marginTop="@dimen/floating_words_margin_vertical"
           android:layout_weight="1"
           android:autoText="true"
           android:gravity="center"
@@ -46,8 +46,8 @@
           android:id="@+id/textview_word_2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/margin_tiny"
-          android:layout_marginTop="@dimen/margin_tiny"
+          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
+          android:layout_marginTop="@dimen/floating_words_margin_vertical"
           android:layout_weight="1"
           android:autoText="true"
           android:gravity="center"
@@ -60,8 +60,8 @@
           android:id="@+id/textview_word_3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/margin_tiny"
-          android:layout_marginTop="@dimen/margin_tiny"
+          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
+          android:layout_marginTop="@dimen/floating_words_margin_vertical"
           android:layout_weight="1"
           android:autoText="true"
           android:gravity="center"
@@ -80,8 +80,8 @@
           android:id="@+id/textview_word_4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/margin_tiny"
-          android:layout_marginTop="@dimen/margin_tiny"
+          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
+          android:layout_marginTop="@dimen/floating_words_margin_vertical"
           android:layout_weight="1"
           android:autoText="true"
           android:gravity="center"
@@ -93,8 +93,8 @@
           android:id="@+id/textview_word_5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/margin_tiny"
-          android:layout_marginTop="@dimen/margin_tiny"
+          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
+          android:layout_marginTop="@dimen/floating_words_margin_vertical"
           android:layout_weight="1"
           android:autoText="true"
           android:gravity="center"
@@ -106,8 +106,8 @@
           android:id="@+id/textview_word_6"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/margin_tiny"
-          android:layout_marginTop="@dimen/margin_tiny"
+          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
+          android:layout_marginTop="@dimen/floating_words_margin_vertical"
           android:layout_weight="1"
           android:autoText="true"
           android:gravity="center"
