--- a/app/src/main/res/layout/layout_realtime_camera_preview_hud_overlay.xml
+++ b/app/src/main/res/layout/layout_realtime_camera_preview_hud_overlay.xml
@@ -20,6 +20,7 @@
       android:src="@drawable/ic_action_menu_hamburger"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toTopOf="parent"
+      android:layout_marginStart="@dimen/hud_margin_uniform_normal"
       />
 
   <LinearLayout
@@ -33,6 +34,9 @@
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      android:id="@+id/linearLayout"
       >
 
     <Button
@@ -66,25 +70,79 @@
   </LinearLayout>
 
 
+  <View
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_marginBottom="0dp"
+      android:layout_marginLeft="0dp"
+      android:layout_marginRight="0dp"
+      android:layout_marginTop="0dp"
+      android:background="@color/saymyname_white_alpha"
+      android:contextClickable="false"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/button_shutter"
+      app:layout_constraintVertical_bias="0.089999974"
+      />
   <com.android.szparag.saymyname.views.widgets.SaymynameCameraShutterButton
       android:id="@+id/button_shutter"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="24dp"
-      android:layout_marginLeft="@dimen/hud_margin_uniform_normal"
-      android:layout_marginRight="@dimen/hud_margin_uniform_normal"
+      android:layout_marginBottom="64dp"
+      android:layout_marginEnd="16dp"
+      android:layout_marginLeft="16dp"
+      android:layout_marginRight="16dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="@dimen/fab_margin"
       android:adjustViewBounds="true"
       android:clickable="true"
       android:foreground="@drawable/drawable_camera_shutter_top"
       android:gravity="top"
       android:hapticFeedbackEnabled="true"
       app:backgroundTint="@color/saymyname_black_dark_alpha2"
-      app:elevation="10dp"
+      app:elevation="12dp"
       app:fabSize="normal"
       app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintLeft_toRightOf="@+id/button_camera_switch"
+      app:layout_constraintRight_toLeftOf="@+id/button_camera_settings"
       app:rippleColor="@color/saymyname_blue_primary"
+      />
+  <ImageButton
+      android:id="@+id/button_camera_switch"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:background="?attr/selectableItemBackground"
+      android:src="@drawable/ic_action_camera_front"
+      android:text="Button"
+      android:layout_marginLeft="32dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toLeftOf="@+id/button_shutter"
+      android:layout_marginRight="32dp"
+      app:layout_constraintHorizontal_chainStyle="spread_inside"
+      app:layout_constraintHorizontal_bias="0.33"
+      app:layout_constraintBottom_toBottomOf="@+id/button_shutter"
+      android:layout_marginBottom="8dp"
+      android:layout_marginStart="32dp"
+      android:layout_marginEnd="32dp"
+      />
+  <ImageButton
+      android:id="@+id/button_camera_settings"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:background="?attr/selectableItemBackground"
+      android:src="@drawable/ic_action_menu_settings"
+      android:text="Button"
+      android:layout_marginRight="32dp"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintLeft_toRightOf="@+id/button_shutter"
+      android:layout_marginLeft="32dp"
+      app:layout_constraintHorizontal_bias="0.66"
+      app:layout_constraintBottom_toBottomOf="@+id/button_shutter"
+      android:layout_marginBottom="8dp"
+      android:layout_marginStart="32dp"
+      android:layout_marginEnd="32dp"
       />
 
 </android.support.constraint.ConstraintLayout>
