Randomizing non-translated views position, added texts shadowing

--- a/app/src/main/res/layout/view_floating_words.xml
+++ b/app/src/main/res/layout/view_floating_words.xml
@@ -1,120 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.android.szparag.saymyname.views.widgets.SaymynameFloatingWordsView
+<com.android.szparag.saymyname.views.widgets.overlays.SaymynameFloatingWordsView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/view_floating_words"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     android:orientation="vertical"
+    android:soundEffectsEnabled="true"
+    android:splitMotionEvents="false"
+    tools:background="@android:color/holo_blue_dark"
     >
 
+  <TextView
+      android:id="@+id/textview_word_1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="@dimen/floating_words_margin_vertical"
+      android:layout_marginTop="@dimen/floating_words_margin_vertical"
+      android:layout_weight="1"
+      android:gravity="center"
+      android:shadowColor="@color/colorPrimary"
+      android:shadowDx="0.0"
+      android:shadowDy="0.0"
+      android:shadowRadius="25.0"
+      android:textAllCaps="true"
+      android:textColor="@color/button_hud_primary_alpha"
+      android:textSize="14sp"
+      android:textStyle="bold"
+      tools:text="testtext"
+      />
+  <TextView
+      android:id="@+id/textview_word_2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="@dimen/floating_words_margin_vertical"
+      android:layout_marginTop="@dimen/floating_words_margin_vertical"
+      android:layout_weight="1"
+      android:gravity="center"
+      android:shadowColor="@color/colorPrimary"
+      android:shadowDx="0.0"
+      android:shadowDy="0.0"
+      android:shadowRadius="25.0"
+      android:textAllCaps="true"
+      android:textColor="@color/button_hud_primary_alpha"
+      android:textSize="14sp"
+      android:textStyle="bold"
+      tools:text="testtext"
+      />
+  <TextView
+      android:id="@+id/textview_word_3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="@dimen/floating_words_margin_vertical"
+      android:layout_marginTop="@dimen/floating_words_margin_vertical"
+      android:layout_weight="1"
+      android:gravity="center"
+      android:shadowColor="@color/colorPrimary"
+      android:shadowDx="0.0"
+      android:shadowDy="0.0"
+      android:shadowRadius="25.0"
+      android:textAllCaps="true"
+      android:textColor="@color/button_hud_primary_alpha"
+      android:textSize="14sp"
+      android:textStyle="bold"
+      tools:text="testtext"
+      />
 
-  <LinearLayout
+  <TextView
+      android:id="@+id/textview_word_4"
       android:layout_width="0dp"
-      android:layout_height="0dp"
-      android:layout_marginBottom="0dp"
-      android:layout_marginLeft="0dp"
-      android:layout_marginRight="0dp"
-      android:layout_marginTop="450dp"
-      android:background="@android:color/transparent"
-      android:orientation="vertical"
-      app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
+      android:layout_weight="1"
+      android:gravity="center"
+      android:shadowColor="@color/colorPrimary"
+      android:shadowDx="0.0"
+      android:shadowDy="0.0"
+      android:shadowRadius="25.0"
+      android:textAllCaps="true"
+      android:textColor="@color/saymyname_blue_dark"
+      android:textSize="18sp"
+      app:layout_constraintBaseline_toBaselineOf="@+id/textview_word_5"
+      app:layout_constraintHorizontal_bias="0.513"
       app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-      <TextView
-          android:id="@+id/textview_word_1"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
-          android:layout_marginTop="@dimen/floating_words_margin_vertical"
-          android:layout_weight="1"
-          android:autoText="true"
-          android:gravity="center"
-          android:textAllCaps="true"
-          android:textColor="@color/button_hud_primary_alpha"
-          android:textSize="14sp"
-          android:textStyle="bold"
-          />
-      <TextView
-          android:id="@+id/textview_word_2"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
-          android:layout_marginTop="@dimen/floating_words_margin_vertical"
-          android:layout_weight="1"
-          android:autoText="true"
-          android:gravity="center"
-          android:textAllCaps="true"
-          android:textColor="@color/button_hud_primary_alpha"
-          android:textSize="14sp"
-          android:textStyle="bold"
-          />
-      <TextView
-          android:id="@+id/textview_word_3"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
-          android:layout_marginTop="@dimen/floating_words_margin_vertical"
-          android:layout_weight="1"
-          android:autoText="true"
-          android:gravity="center"
-          android:textAllCaps="true"
-          android:textColor="@color/button_hud_primary_alpha"
-          android:textSize="14sp"
-          android:textStyle="bold"
-          />
-    </LinearLayout>
+      app:layout_constraintRight_toLeftOf="@+id/textview_word_5"
+      tools:text="testtext"
+      />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-      <TextView
-          android:id="@+id/textview_word_4"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
-          android:layout_marginTop="@dimen/floating_words_margin_vertical"
-          android:layout_weight="1"
-          android:autoText="true"
-          android:gravity="center"
-          android:textAllCaps="true"
-          android:textColor="@color/saymyname_blue_dark"
-          android:textSize="18sp"
-          />
-      <TextView
-          android:id="@+id/textview_word_5"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
-          android:layout_marginTop="@dimen/floating_words_margin_vertical"
-          android:layout_weight="1"
-          android:autoText="true"
-          android:gravity="center"
-          android:textAllCaps="true"
-          android:textColor="@color/saymyname_blue_dark"
-          android:textSize="18sp"
-          />
-      <TextView
-          android:id="@+id/textview_word_6"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginBottom="@dimen/floating_words_margin_vertical"
-          android:layout_marginTop="@dimen/floating_words_margin_vertical"
-          android:layout_weight="1"
-          android:autoText="true"
-          android:gravity="center"
-          android:textAllCaps="true"
-          android:textColor="@color/saymyname_blue_dark"
-          android:textSize="18sp"
-          />
-    </LinearLayout>
-  </LinearLayout>
-</com.android.szparag.saymyname.views.widgets.SaymynameFloatingWordsView>
+  <TextView
+      android:id="@+id/textview_word_5"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="32dp"
+      android:layout_weight="1"
+      android:gravity="center"
+      android:shadowColor="@color/colorPrimary"
+      android:shadowDx="0.0"
+      android:shadowDy="0.0"
+      android:shadowRadius="25.0"
+      android:textAllCaps="true"
+      android:textColor="@color/saymyname_blue_dark"
+      android:textSize="18sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toRightOf="@+id/textview_word_4"
+      app:layout_constraintRight_toLeftOf="@+id/textview_word_6"
+      tools:text="testtext"
+      />
+
+  <TextView
+      android:id="@+id/textview_word_6"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
+      android:layout_weight="1"
+      android:gravity="center"
+      android:shadowColor="@color/colorPrimary"
+      android:shadowDx="0.0"
+      android:shadowDy="0.0"
+      android:shadowRadius="25.0"
+      android:textAllCaps="true"
+      android:textColor="@color/saymyname_blue_dark"
+      android:textSize="18sp"
+      app:layout_constraintBaseline_toBaselineOf="@+id/textview_word_5"
+      app:layout_constraintLeft_toRightOf="@+id/textview_word_5"
+      app:layout_constraintRight_toRightOf="parent"
+      tools:text="testtext"
+      />
+
+</com.android.szparag.saymyname.views.widgets.overlays.SaymynameFloatingWordsView>
