Text widgets naming consistency refactor, textAllCaps off for auxilliary texts

--- a/app/src/main/res/layout/layout_realtime_camera_preview_hud_overlay.xml
+++ b/app/src/main/res/layout/layout_realtime_camera_preview_hud_overlay.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     android:orientation="vertical"
     tools:background="@android:color/holo_red_dark"
     >
@@ -14,29 +16,29 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="@dimen/hud_margin_uniform_normal"
+      android:layout_marginStart="@dimen/hud_margin_uniform_normal"
       android:layout_marginTop="@dimen/hud_margin_uniform_normal"
       android:background="?attr/selectableItemBackground"
       android:clickable="true"
       android:src="@drawable/ic_action_menu_hamburger"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      android:layout_marginStart="@dimen/hud_margin_uniform_normal"
       />
 
   <LinearLayout
+      android:id="@+id/linearLayout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginEnd="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
+      android:layout_marginStart="8dp"
       android:layout_marginTop="@dimen/hud_margin_vertical_big"
       android:background="@drawable/drawable_lang_model_selector_background"
       android:orientation="horizontal"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      android:layout_marginStart="8dp"
-      android:layout_marginEnd="8dp"
-      android:id="@+id/linearLayout"
       >
 
     <Button
@@ -95,7 +97,6 @@
       android:layout_marginLeft="16dp"
       android:layout_marginRight="16dp"
       android:layout_marginStart="16dp"
-      android:layout_marginTop="@dimen/fab_margin"
       android:adjustViewBounds="true"
       android:clickable="true"
       android:foreground="@drawable/drawable_camera_shutter_top"
@@ -113,36 +114,56 @@
       android:id="@+id/button_camera_switch"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
+      android:layout_marginBottom="8dp"
+      android:layout_marginEnd="32dp"
+      android:layout_marginLeft="32dp"
+      android:layout_marginRight="32dp"
+      android:layout_marginStart="32dp"
       android:background="?attr/selectableItemBackground"
       android:src="@drawable/ic_action_camera_front"
       android:text="Button"
-      android:layout_marginLeft="32dp"
+      app:layout_constraintBottom_toBottomOf="@+id/button_shutter"
+      app:layout_constraintHorizontal_bias="0.33"
+      app:layout_constraintHorizontal_chainStyle="spread"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toLeftOf="@+id/button_shutter"
-      android:layout_marginRight="32dp"
-      app:layout_constraintHorizontal_chainStyle="spread_inside"
-      app:layout_constraintHorizontal_bias="0.33"
-      app:layout_constraintBottom_toBottomOf="@+id/button_shutter"
-      android:layout_marginBottom="8dp"
-      android:layout_marginStart="32dp"
-      android:layout_marginEnd="32dp"
       />
   <ImageButton
       android:id="@+id/button_camera_settings"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
+      android:layout_marginBottom="8dp"
+      android:layout_marginEnd="32dp"
+      android:layout_marginLeft="32dp"
+      android:layout_marginRight="32dp"
+      android:layout_marginStart="32dp"
       android:background="?attr/selectableItemBackground"
       android:src="@drawable/ic_action_menu_settings"
       android:text="Button"
-      android:layout_marginRight="32dp"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintLeft_toRightOf="@+id/button_shutter"
-      android:layout_marginLeft="32dp"
-      app:layout_constraintHorizontal_bias="0.66"
       app:layout_constraintBottom_toBottomOf="@+id/button_shutter"
-      android:layout_marginBottom="8dp"
-      android:layout_marginStart="32dp"
-      android:layout_marginEnd="32dp"
+      app:layout_constraintHorizontal_bias="0.66"
+      app:layout_constraintLeft_toRightOf="@+id/button_shutter"
+      app:layout_constraintRight_toRightOf="parent"
+      />
+  <Switch
+      android:id="@+id/switch1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="16dp"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
+      android:layout_marginTop="64dp"
+      android:background="@color/saymyname_white_alpha"
+      android:checked="false"
+      android:padding="4dp"
+      android:text="DEBUG MOCK DATA "
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.72"
+      tools:checked="true"
       />
 
 </android.support.constraint.ConstraintLayout>
