Custom View (widget) for FloatingWord

--- a/app/src/main/res/layout/view_floating_words.xml
+++ b/app/src/main/res/layout/view_floating_words.xml
@@ -15,124 +15,68 @@
     tools:background="@android:color/holo_blue_dark"
     >
 
-  <TextView
+  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
       android:id="@+id/textview_word_auxilliary_1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="@dimen/floating_words_margin_vertical"
-      android:layout_marginTop="@dimen/floating_words_margin_vertical"
       android:layout_weight="1"
-      android:gravity="center"
-      android:shadowColor="@color/colorPrimary"
-      android:shadowDx="0.0"
-      android:shadowDy="0.0"
-      android:shadowRadius="25.0"
-      android:textAllCaps="false"
-      android:textColor="@color/button_hud_primary_alpha"
-      android:textSize="@dimen/floating_words_font_normal"
-      android:textStyle="bold"
+      android:visibility="gone"
+      app:type="auxiliary"
       tools:text="testtext"
       tools:visibility="visible"
-      android:visibility="gone"
       />
-  <TextView
+  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
       android:id="@+id/textview_word_auxilliary_2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="@dimen/floating_words_margin_vertical"
-      android:layout_marginTop="@dimen/floating_words_margin_vertical"
       android:layout_weight="1"
-      android:gravity="center"
-      android:shadowColor="@color/colorPrimary"
-      android:shadowDx="0.0"
-      android:shadowDy="0.0"
-      android:shadowRadius="25.0"
-      android:textAllCaps="false"
-      android:textColor="@color/button_hud_primary_alpha"
-      android:textSize="@dimen/floating_words_font_normal"
-      android:textStyle="bold"
+      android:visibility="gone"
+      app:type="auxiliary"
       tools:text="testtext"
       tools:visibility="visible"
-      android:visibility="gone"
       />
-  <TextView
+  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
       android:id="@+id/textview_word_auxilliary_3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="@dimen/floating_words_margin_vertical"
-      android:layout_marginTop="@dimen/floating_words_margin_vertical"
       android:layout_weight="1"
-      android:gravity="center"
-      android:shadowColor="@color/colorPrimary"
-      android:shadowDx="0.0"
-      android:shadowDy="0.0"
-      android:shadowRadius="25.0"
-      android:textAllCaps="false"
-      android:textColor="@color/button_hud_primary_alpha"
-      android:textSize="@dimen/floating_words_font_normal"
-      android:textStyle="bold"
+      android:visibility="gone"
+      app:type="auxiliary"
       tools:text="testtext"
       tools:visibility="visible"
-      android:visibility="gone"
       />
 
-  <TextView
+  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
       android:id="@+id/textview_word_primary_1"
-      android:layout_width="0dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginLeft="8dp"
-      android:layout_marginRight="8dp"
       android:layout_weight="1"
-      android:gravity="center"
-      android:shadowColor="@color/colorPrimary"
-      android:shadowDx="0.0"
-      android:shadowDy="0.0"
-      android:shadowRadius="25.0"
-      android:textAllCaps="true"
-      android:textColor="@color/saymyname_blue_dark"
-      android:textSize="@dimen/floating_words_font_big"
+      app:type="primary"
+      android:visibility="gone"
       tools:text="testtext"
       tools:visibility="visible"
-      android:visibility="gone"
       />
 
-  <TextView
+  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
       android:id="@+id/textview_word_primary_2"
-      android:layout_width="0dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="32dp"
       android:layout_weight="1"
-      android:gravity="center"
-      android:shadowColor="@color/colorPrimary"
-      android:shadowDx="0.0"
-      android:shadowDy="0.0"
-      android:shadowRadius="25.0"
-      android:textAllCaps="true"
-      android:textColor="@color/saymyname_blue_dark"
-      android:textSize="@dimen/floating_words_font_big"
+      app:type="primary"
+      android:visibility="gone"
       tools:text="testtext"
       tools:visibility="visible"
-      android:visibility="gone"
       />
 
-  <TextView
+  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
       android:id="@+id/textview_word_primary_3"
-      android:layout_width="0dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginLeft="8dp"
-      android:layout_marginRight="8dp"
       android:layout_weight="1"
-      android:gravity="center"
-      android:shadowColor="@color/colorPrimary"
-      android:shadowDx="0.0"
-      android:shadowDy="0.0"
-      android:shadowRadius="25.0"
-      android:textAllCaps="true"
-      android:textColor="@color/saymyname_blue_dark"
-      android:textSize="@dimen/floating_words_font_big"
+      app:type="primary"
+      android:visibility="gone"
       tools:text="testtext"
       tools:visibility="visible"
-      android:visibility="gone"
       />
 
 </com.android.szparag.saymyname.views.widgets.overlays.SaymynameFloatingWordsView>
