New floating words randomization spawn system

--- a/app/src/main/res/layout/activity_realtime_camera_preview.xml
+++ b/app/src/main/res/layout/activity_realtime_camera_preview.xml
@@ -14,7 +14,7 @@
   <include
       layout="@layout/view_floating_words"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="431dp"
       />
 
   <include
