--- a/app/src/main/res/layout/layout_realtime_camera_preview_hud_overlay.xml
+++ b/app/src/main/res/layout/layout_realtime_camera_preview_hud_overlay.xml
@@ -8,8 +8,8 @@
     android:clipChildren="false"
     android:clipToPadding="false"
     android:orientation="vertical"
-    tools:background="@android:color/holo_red_dark"
     >
+  <!--tools:background="@android:color/"-->
 
   <ImageButton
       android:id="@+id/button_menu_hamburger"
